--- a/classNotes/6-vectors/slides-6-vectors.Rmd
+++ b/classNotes/6-vectors/slides-6-vectors.Rmd
@@ -11,46 +11,53 @@ output:
 # Announcements
 
 ---
-# Iteration review
+# Iteration review: loop over a sequence
 ```{r}
-x <- seq(10)
-x
+seq(5)
 ```
-Iterate over `x`:
 
 --
 .pull-left[
 ### `for` loop
+<br> 
+
 ```{r}
-for (i in 1:length(x)) {
+for (i in seq(5)) {
     cat(i, '\n')
 }
 ```
 ]
 --
 .pull-right[
-### `while` loops
+### `while` loop
+<br> 
+
+```{r}
 i <- 1
-while (i <= length(x)) {
+while (i <= 5) {
     cat(i, '\n')
     i <- i + 1
 }
+```
 ]
 
 ---
 # Search for something in a sequence
+
 ```{r}
-x <- seq(10)
-x
+seq(5)
 ```
-Search for **even** numbers:
+
+### Count of **even** numbers in sequence:
 
 --
 .pull-left[
 ### `for` loop
+<br> 
+
 ```{r}
 count <- 0
-for (i in 1:length(x)) {
+for (i in seq(5)) {
     if (i %% 2 == 0) {
         count <- count + 1
     }
@@ -60,19 +67,26 @@ count
 ]
 --
 .pull-right[
-### `while` loops
+### `while` loop
+<br> 
+
+```{r}
 count <- 0
 i <- 1
-while (i <= length(x)) {
+while (i <= 5) {
     if (i %% 2 == 0) {
         count <- count + 1
     }
     i <- i + 1
 }
+count
+```
 ]
 
 ---
-# We've been dealing with vectors all along!
+# This week: Vectors!
+
+### Note: We've been dealing with vectors all along!
 
 ```{r}
 x <- 1
@@ -82,6 +96,11 @@ x
 --
 ```{r}
 is.vector(x)
+```
+
+--
+```{r}
+length(x)
 ```
 
 ---
@@ -133,6 +152,25 @@ rep(5, 10)
 --
 ```{r}
 rep("snarf", 5)
+```
+
+---
+# Repeating a vector
+
+--
+```{r}
+x <- rep(c("foo", "snarf"), 3)
+x
+length(x)
+```
+<br>
+
+--
+Note the difference when adding the `each` argument:
+```{r}
+x <- rep(c("foo", "snarf"), each = 3)
+x
+length(x)
 ```
 
 ---
@@ -193,39 +231,9 @@ x - x
 ```
 
 ---
-# Other useful math functions
-
-```{r}
-x <- 1:10
-x
-```
---
-```{r}
-prod(x)
-```
---
-```{r}
-mean(x)
-```
---
-```{r}
-median(x)
-```
---
-```{r}
-max(x)
-```
---
-```{r}
-min(x)
-```
-
----
 # Practice: Think-Pair-Share
 
-[3 minutes](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
-
-### What will this return?
+[3 minutes](https://www.youtube.com/watch?v=iHdviZkM7S4) - no typing!
 
 .pull-left[
 ```{r}
@@ -244,6 +252,9 @@ f2 <- function(x) {
 }
 ```
 ]
+<br>
+
+What will this return?
 ```{r, echo=FALSE}
 x <- c(1, 2, 3)
 y <- c(1, TRUE, FALSE, 7)
@@ -269,7 +280,7 @@ x
 ```
 
 --
-Using a loop:
+**Using a loop**:
 ```{r}
 total <- 0
 for (item in x) {
@@ -280,9 +291,41 @@ total
 <br>
 
 --
-Using the `sum()` function:
+**Using the `sum()` function**:
 ```{r}
 sum(x)
+```
+
+---
+# Other useful "summary" functions
+
+--
+```{r}
+x
+```
+--
+```{r}
+length(x)
+```
+--
+```{r}
+prod(x)
+```
+--
+```{r}
+mean(x)
+```
+--
+```{r}
+median(x)
+```
+--
+```{r}
+max(x)
+```
+--
+```{r}
+min(x)
 ```
 
 ---
@@ -295,16 +338,17 @@ x <- c(3.1415, 1.618, 2.718)
 x
 ```
 --
-Using a loop:
+**Using a loop**:
 ```{r}
-for (i in 1:length(x)) {
-    remainder <- x[i] %% 1
+remainder <- c()
+for (i in x) {
+    remainder <- c(remainder, i %% 1)
 }
 remainder
 ```
 
 --
-Using a vector:
+**Using a vector**:
 ```{r}
 remainder <- x %% 1
 remainder
@@ -351,6 +395,10 @@ x[-1] # Returns everything except the first element
 ```
 --
 ```{r}
+x[-1:-3]  # Returns everything except the first three elements
+```
+--
+```{r}
 x[-c(2, 7)] # Returns everything except the 2nd and 7th elements
 ```
 --
@@ -369,14 +417,14 @@ x
 --
 1) Use the `names()` function:
 ```{r}
-names(x) <- c('one', 'two', 'three', 'four', 'five')
+names(x) <- c('a', 'b', 'c', 'd', 'e')
 x
 ```
 
 --
 2) Use the `c()` function:
 ```{r}
-y <- c('one' = 1, 'two' = 2, 'three' = 3, 'four' = 4, 'five' = 5)
+y <- c('a' = 1, 'b' = 2, 'c' = 3, 'd' = 4, 'e' = 5)
 y
 ```
 
@@ -388,11 +436,11 @@ x
 ```
 --
 ```{r}
-x['one']
+x['a']
 ```
 --
 ```{r}
-x[c('two', 'three')]
+x[c('a', 'c')]
 ```
 
 ---
@@ -416,19 +464,10 @@ Use logical vector in brackets to filter elements:
 x[x > 5]
 ```
 
---
-Another way - use the `which()` function:
-```{r}
-which(x > 5) # Returns indices of TRUE elements
-x[which(x > 5)] # Use which to select elements based on a condition
-```
-
 ---
 # Practice: Think-Pair-Share
 
 [4 minutes](https://www.youtube.com/watch?v=zVHWhLme2NQ) - no typing!
-
-### What will this return?
 
 ```{r}
 f <- function(x) {
@@ -439,11 +478,13 @@ f <- function(x) {
 }
 x <- c(1, 2, 3)
 ```
+
+What will this return?
 ```{r, eval=FALSE}
 f(x)
 ```
 --
-```{r}
+```{r, echo=FALSE}
 f(x)
 ```
 
@@ -463,18 +504,31 @@ x == y
 ```{r, echo=FALSE}
 x == y
 ```
+<br>
+
 --
 To check if _all_ elements are the same, use `all()`:
 ```{r}
 all(x == y)
 ```
 
---
+---
+# Comparing vectors
+
 To check if _any_ elements are the same, use `any()`:
+
+--
 ```{r}
 a <- c(1, 2, 3)
 b <- c(-1, 2,-3)
 a == b
+```
+--
+```{r}
+all(a == b)
+```
+--
+```{r}
 any(a == b)
 ```
 
@@ -482,28 +536,32 @@ any(a == b)
 # `all()` vs. `identical()`
 
 --
-`all()` only compares the _elements_ in vectors - it's looking for `TRUE` and `FALSE` values
-<br>
-<br>
-
---
-`identical()` compares vector elements and _attributes_, like names:
-
---
 ```{r}
-x <- c('a' = 1, 'b' = 2, 'c' = 3)
-y <- c('one' = 1, 'two' = 2, 'three' = 3)
-x
-y
+x <- c(1, 2, 3)
+y <- c(1, 2, 3)
+names(x) <- c('a', 'b', 'c')
+names(y) <- c('one', 'two', 'three')
 ```
+<br>
+
 --
 ```{r}
 all(x == y) # Only compares the elements
 ```
+<br>
+
 --
 ```{r}
 identical(x, y) # Also compares the **names** of the elements
 ```
+<br>
+
+--
+```{r}
+names(y) <- c('a', 'b', 'c')
+identical(x, y) 
+```
+
 
 ---
 # Practice: Think-Pair-Share
@@ -527,6 +585,7 @@ Loop solution:
 
 ```{r, eval=FALSE}
 isPrime <- function(n) {
+    if (n <= 1) { return(FALSE) }
     if (n == 2) { return(TRUE) }
     for (i in seq(2, n-1)) {
         if (n %% i == 0) {
@@ -575,16 +634,18 @@ x1 / x2 # Returns (1/4, 2/5, 3/6)
 ---
 # Vectorized operations
 
-### Be careful - dimensions much match!
+### Be careful to match dimensions!
 
 --
 ```{r}
-# Mis-matched dimensions only give a warning!
-x1 <- c(1, 2, 3)
+x1 <- c(1, 2, 3, 4)
 x2 <- c(4, 5)
 ```
+```{r, eval=FALSE}
+x1 + x2
+```
 --
-```{r, error=TRUE}
+```{r, echo=FALSE}
 x1 + x2
 ```
 
@@ -594,8 +655,11 @@ Single-value vector operations
 x1 <- c(1, 2, 3)
 x2 <- c(4)
 ```
+```{r, eval=FALSE}
+x1 + x2
+```
 --
-```{r}
+```{r, echo=FALSE}
 x1 + x2
 ```
 
@@ -627,59 +691,44 @@ a[order(a)]
 ```
 
 ---
-# Group practice
+# Group practice - no loops! [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw)
 
-[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+1) `reverse(x)`
 
-.pull-left[
-1) `reverseVector(x)`
+Write a function that returns the vector in reverse order. You cannot use the `rev()` function. Test cases:
 
-Write a function that returns the vector in reverse order. So if `x` equals `c(2,3,4)`, then `reverseVector(x)` should equal `c(4,3,2)`. You cannot use the `rev()` function (which does exactly this). **No loops!** Here's some test cases:
+- `reverse(c(5, 1, 3)) == c(3, 1, 5)`
+- `reverse(c('a', 'b', 'c')) == c('c', 'b', 'a')`
+- `reverse(c(FALSE, TRUE, TRUE)) == c(TRUE, TRUE, FALSE)`
+- `reverse(seq(10)) == seq(10, 1, -1)`
 
-- `reverseVector(c(5, 1, 3)) == c(3, 1, 5)`
-- `reverseVector(c(FALSE, TRUE, TRUE)) == c(TRUE, TRUE, FALSE)`
-- `reverseVector(seq(10)) == seq(10, 1, -1)`
-
-]
-
-.pull-right[
 2) `median(a)`
 
-Write a function that takes a vector of numbers `a` and returns the median value in the vector, which is the value of the middle element (or the average of the two middle elements). **No loops!** Here's some test cases:
+Write a function that takes a vector of numbers `a` and returns the median value in the vector, which is the value of the middle element (or the average of the two middle elements). Test cases:
 
-- `median(c(5,3,8,4)) == mean(c(3,8))`
 - `median(c(0,0,0)) == 0`
 - `median(c(1,2,3)) == 2`
 - `median(c(4,5,6,7,8)) == 6`
+- `median(c(5,3,8,4)) == mean(c(3,8))`
 - `median(c(4,5,6,7)) == mean(c(5,6))`
 
-]
-
 ---
-# Group practice
+# Group practice - no loops! [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw)
 
-[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+1) `dotProduct(a, b)`
 
-.pull-left[
-2) `dotProduct(a, b)`
-
-**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.
-
-With this in mind, write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. **No loops!** Here's some test cases:
+The "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`. Write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. Test cases:
 
 - `dotProduct(c(1,2,3), c(4,5,6)) == 32`
 - `dotProduct(c(1,2), c(4,5,6)) == 14`
 - `dotProduct(c(2,3,4), c(-7,1,9)) == 25`
 - `dotProduct(c(0,0,0), c(-7,1,9)) == 0`
-]
 
-.pull-right[
-1) `alternatingSum(a)`
+2) `alternatingSum(a)`
 
-Write a function that takes a vector of numbers `a` and returns the alternating sum, where the sign alternates from positive to negative or vice versa. **No loops!** Here's some test cases:
+Write a function that takes a vector of numbers `a` and returns the alternating sum, where the sign alternates from positive to negative or vice versa. Test cases:
 
 - `alternatingSum(c(5,3,8,4)) == (5 - 3 + 8 - 4)`
 - `alternatingSum(c(1,2,3)) == (1 - 2 + 3)`
 - `alternatingSum(c(0,0,0)) == 0`
 - `alternatingSum(c(-7,5,3)) == (-7 - 5 + 3)`
-]
